--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700&display=swap" rel="stylesheet">
 
+    <link rel="icon" href="logo.jpg">
+    <link rel="apple-touch-icon" href="logo.jpg"/>
+    <link rel="apple-touch-icon" href="./logo.jpg"/>
+
+
 
     
   </head>
