--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
     <link rel="apple-touch-icon" href="logo.jpg"/>
     <link rel="apple-touch-icon" href="./logo.jpg"/>
 
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+
 
 
     
