--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    
+    <meta name="theme-color" content="#051c1c"/>
+
+
 
 
 
